<resources>
    <string name="app_name">IoT Alexa</string>

    <string name="home">Home</string>
    <string name="devices">My Devices</string>

    <string name="temperature_history">Temperature history (ºC)</string>
    <string name="humidity_history">Humidity history (%)</string>

    <string name="temperature">Temperature</string>
    <string name="temperature_status">Cool</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_status">Comfortable</string>
    <string name="humidity_value">18</string>
    <string name="humidity_value_pct">%</string>
    <string name="ambilight">Ambilight</string>
    <string name="foot_lamp">Foot lamp</string>

    <string name="currently">Currently</string>
    <string name="currently_temperature">23.5</string>
    <string name="currently_temperature_o">o</string>
    <string name="currently_status">Mostly cloudy</string>

    <string name="error_message">Looks like there was a problem\nTap to retry</string>
</resources>
