<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@null">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/humidity"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/caviar_dreams"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/humidity"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/living_room_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="-2dp"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/humidity_value"
                android:textColor="@android:color/white"
                android:textSize="38sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/living_room_humidity"
                android:layout_alignBottom="@id/living_room_humidity"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/humidity_value_pct"
                android:textColor="@android:color/white"
                android:textSize="28sp"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/humidity_status"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/caviar_dreams"/>

</android.support.v7.widget.LinearLayoutCompat>