<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@null"
        app:elevation="0dp">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/weather_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:layout_marginBottom="38dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/currently"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams"
                android:padding="8dp"
                android:layout_marginLeft="38dp"
                android:text="@string/currently"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/currently_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/currently"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/currently_temperature"
                android:textSize="48sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/currently_temperature_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/currently_temperature"
                android:layout_marginLeft="4dp"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/currently_temperature_o"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/currently_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/currently_temperature_o"
                android:layout_alignBottom="@id/currently_temperature"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/currently_status"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".75"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>