<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caviar_dreams"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/devices"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="26dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:orientation="vertical">

        <!-- nodev1 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/nodev1_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/status_dot_red"/>

            <TextView
                android:id="@+id/nodev1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/nodev1_status"
                android:layout_marginStart="12dp"
                android:padding="6dp"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/foot_lamp"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

        </RelativeLayout>

        <!-- nodev2 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/nodev2_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/status_dot_red"/>

            <TextView
                android:id="@+id/nodev2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/nodev2_status"
                android:layout_marginStart="12dp"
                android:padding="6dp"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/ambilight"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="38dp"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@null"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/living_room_tbd1_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/device_height"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp">

                    <include layout="@layout/ambilight"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@null"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:weightSum="1">

                <android.support.v7.widget.CardView
                    android:id="@+id/living_room_tbd2_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/device_height"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp">

                    <include layout="@layout/foot_lamp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>